--- a/react-version/todo.txt
+++ b/react-version/todo.txt
@@ -1,3 +1,3 @@
-- fix scrolling ( script.js )
-- fix thing showing up on mobile
-- make all assets into components
+- fix scrolling ( X )
+- fix thing showing up on mobile ( X )
+- make all assets into components 
